<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="2dp"
    app:cardCornerRadius="4dp"
    tools:context=".ui.tag.TagFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/tag_gradient"
        >

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="4dp"
            android:background="@drawable/tag_chipgroup_gradient">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_2F"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_2G"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_2A"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_2B"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_3C"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_3D"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_3E"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_3F"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_3G"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:textAppearance="@style/myChipFontStyle"
                    android:text="@string/tag_3A"/>

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/tag_chipgroup_gradient"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>