<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SubActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">


            <LinearLayout
                android:id="@+id/imageBorder"
                android:background="@drawable/round_background_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="1dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="centerCrop"
                    android:layout_margin="5dp"
                    tools:srcCompat="@drawable/icon_cd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="3dp">

                    <TextView
                        android:id="@+id/text_title_insert"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/music_title_insert" />

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_singer_insert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/my_gray"
                        android:text="@string/music_singer_insert" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/my_gray"
                        android:text="  /  "/>

                   <TextView
                        android:id="@+id/text_pitch_insert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/my_gray"
                        android:text="@string/music_pitch_insert" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="right">

            <ToggleButton
                android:id="@+id/button_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/button_favorite"
                android:layout_gravity="center"
                android:checked="false"
                android:text=""
                android:textOff=""
                android:textOn="" />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>